log
Thu 16 May 2024 12:48:59 AM UTC: 
 tests:  0|5
total_score: 0/70
b4d37f4
Thu 16 May 2024 02:46:52 PM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  2|4
total_score: 15/70
f492af6
Thu 16 May 2024 02:54:55 PM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|5
total_score: 0/70
bbde453
Thu 16 May 2024 03:02:00 PM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:63:27: error: ‘j’ undeclared (first use in this function)
   63 |     for(int i = 0; i < 9; j++)
      |                           ^
sudoku.c:63:27: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
447310c
Thu 16 May 2024 03:02:10 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
37f97ca
